Fix overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 body, html { 
     height: 100%;
-    width: fit-content;
+    /* width: fit-content; */
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
@@ -13,11 +13,10 @@ body, html {
 .containterpage { 
     height: 100%;
     width:100%;
-    padding-top: 80px;
 }
 
 .centercontent { 
-    display: grid;
+    display: grid; 
     align-items: center;
     justify-content: center;
 }
